--- a/index.html
+++ b/index.html
@@ -1,120 +1,35 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>天马联盟网</title>
+<!-- PopAds 官方弹窗代码 -->
+<script type="text/javascript" data-cfasync="false">
+(function(){var p=window,y="b16f82ee5513ecfdc06df61cd0e71753",
+x=[["siteId",590+768+121+5209784],["minBid",0],["popundersPerIP","0"],
+["delayBetween",0],["default",false],["defaultPerDay",0],
+["topmostLayer","auto"]],
+b=["d3d3LnhhZHNtYXJ0LmNvbS9TL2Jqc29uLWZvcm1hdHRlci5taW4uanM=",
+"ZDEzZW5xMnJ5bXkweWwuY2xvdWRmcm9udC5uZXQvU0F4RVNyL0R0S2wva3N2Zy5taW4uY3Nz"],
+s=-1,c,l,n=function(){clearTimeout(l);s++;
+if(b[s]&&!(1795526562000<(new Date).getTime()&&1<s)){
+c=p.document.createElement("script");
+c.type="text/javascript";c.async=!0;
+var g=p.document.getElementsByTagName("script")[0];
+c.src="https://"+atob(b[s]);c.crossOrigin="anonymous";
+c.onerror=n;c.onload=function(){clearTimeout(l);
+p[y.slice(0,16)+y.slice(0,16)]||n()};
+l=setTimeout(n,5E3);g.parentNode.insertBefore(c,g)}};
+if(!p[y]){try{Object.freeze(p[y]=x)}catch(e){}n()}})();
+</script>
 
-    <!-- ================= PopAds Popunder 代码放这里 ================= -->
-    <!-- ⚠️ 这里粘贴你在 PopAds 后台获取的【完整 JS 代码】 -->
-    <!-- 示例：<script type="text/javascript">...</script> -->
-    <!-- ================= PopAds Popunder 代码结束 ================= -->
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            min-height: 100vh;
-            background: linear-gradient(45deg, #ff7a18, #ffb400, #d9a7c7, #fffcdc);
-            background-size: 400% 400%;
-            animation: bg 15s ease infinite;
-            color: #fff;
-        }
-
-        @keyframes bg {
-            0% { background-position: 0% 50%; }
-            50% { background-position: 100% 50%; }
-            100% { background-position: 0% 50%; }
-        }
-
-        header, footer {
-            background: rgba(0,0,0,0.7);
-            text-align: center;
-            padding: 15px;
-        }
-
-        .content {
-            padding: 30px;
-            max-width: 900px;
-            margin: auto;
-        }
-
-        .card {
-            background: rgba(255,255,255,0.9);
-            color: #333;
-            padding: 20px;
-            margin: 25px 0;
-            border-radius: 10px;
-            text-align: center;
-        }
-
-        .card img {
-            max-width: 100%;
-            border-radius: 8px;
-        }
-
-        .btn {
-            display: inline-block;
-            margin-top: 15px;
-            padding: 12px 25px;
-            background: #ff7a18;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 6px;
-            font-size: 16px;
-        }
-
-        .btn:hover {
-            background: #ffb400;
-        }
-
-        .notice {
-            font-size: 14px;
-            opacity: 0.9;
-            margin-top: 10px;
-        }
-    </style>
+<title>天马联盟网</title>
 </head>
 
-<body>
-
-<header>
-    <h1>天马联盟网</h1>
-    <p>成人流量 · CPM · Pop · 直链变现</p>
-</header>
-
-<div class="content">
-
-    <div class="card">
-        <h2>🔥 热门推荐</h2>
-        <p>高转化成人内容，点击即可进入</p>
-
-        <!-- ================= 可见直链广告位（不属于 Pop） ================= -->
-        <!-- 这里放 PopAds / 其他联盟提供的【Direct Link】 -->
-        <a href="https://example.com" target="_blank" class="btn">
-            立即进入
-        </a>
-        <!-- ================= 可见直链广告位结束 ================= -->
-
-        <div class="notice">
-            * 18+ 内容，请确认已成年
-        </div>
-    </div>
-
-    <div class="card">
-        <h3>广告合作说明</h3>
-        <p>本站支持 Pop / CPM / Direct Link 广告形式</p>
-        <p>适合海外与成人流量投放</p>
-    </div>
-
-</div>
-
-<footer>
-    <p>© 2025 天马联盟网</p>
-    <p>联系邮箱：yangmaoqiang49@gmail.com</p>
-</footer>
-
+<body style="background:#111;color:#fff;text-align:center;padding-top:100px;">
+<h1>天马联盟网</h1>
+<p>成人内容入口，请确认年龄</p>
+<button onclick="alert('欢迎访问')">进入</button>
 </body>
 </html>
