--- a/index.html
+++ b/index.html
@@ -1,73 +1,51 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <title>Welcome</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- ✅ PopAds 官方弹窗广告代码（原样嵌入，已验证） -->
-<script type="text/javascript" data-cfasync="false">
-(function(){var p=window,y="b16f82ee5513ecfdc06df61cd0e71753",
-x=[["siteId",590+768+121+5209784],["minBid",0],["popundersPerIP","0"],
-["delayBetween",0],["default",false],["defaultPerDay",0],
-["topmostLayer","auto"]],
-q=["d3d3LnhhZHNtYXJ0LmNvbS9XL3Fqc29uLWZvcm1hdHRlci5taW4uanM=",
-"ZDExZW5xMnJ5bXkweWwuY2xvdWRmcm9udC5uZXQvRWlXL1BYTUIvc3N2Zy5taW4uY3Nz"],
-b=-1,c,s,n=function(){clearTimeout(s);b++;
-if(q[b]&&!(1795526562000<(new Date).getTime()&&1<b)){
-c=p.document.createElement("script");
-c.type="text/javascript";c.async=!0;
-var g=p.document.getElementsByTagName("script")[0];
-c.src="https://"+atob(q[b]);
-c.crossOrigin="anonymous";
-c.onerror=n;
-c.onload=function(){clearTimeout(s);
-p[y.slice(0,16)+y.slice(0,16)]||n()};
-s=setTimeout(n,5E3);
-g.parentNode.insertBefore(c,g)}};
-if(!p[y]){try{Object.freeze(p[y]=x)}catch(e){}n()}})();
-</script>
+    <!-- ✅ PopAds 验证代码（你给的） -->
+    <meta name="popads-verification-3557104" value="dd5b680a50f2cb1654f979a955c69855" />
 
-<title>天马联盟网</title>
-
-<style>
-body{
-    margin:0;
-    font-family:Arial,Helvetica,sans-serif;
-    background:#0e0e0e;
-    color:#fff;
-    text-align:center;
-}
-.container{
-    padding-top:120px;
-}
-button{
-    padding:15px 30px;
-    font-size:18px;
-    background:#ff4d4f;
-    border:none;
-    border-radius:6px;
-    color:#fff;
-    cursor:pointer;
-}
-button:hover{
-    background:#ff7875;
-}
-.notice{
-    margin-top:20px;
-    font-size:14px;
-    color:#ccc;
-}
-</style>
+    <!-- 基础样式 -->
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            background: #f5f5f5;
+            text-align: center;
+        }
+        .container {
+            max-width: 600px;
+            margin: 80px auto;
+            background: #ffffff;
+            padding: 40px 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+            font-size: 16px;
+        }
+    </style>
 </head>
 
 <body>
-<div class="container">
-    <h1>天马联盟网</h1>
-    <p>成人内容入口，请确认您已满 18 周岁</p>
-    <button onclick="alert('欢迎访问')">进入网站</button>
-    <div class="notice">
-        点击页面任意位置后，广告可能会在新窗口打开
+    <div class="container">
+        <h1>Welcome</h1>
+        <p>Content is loading, please wait...</p>
     </div>
-</div>
+
+    <!-- 🚀 PopAds 弹窗广告脚本（示例，验证通过后你再换正式的） -->
+    <script type="text/javascript">
+        var popads = popads || {};
+        popads.cmd = popads.cmd || [];
+    </script>
+    <script type="text/javascript" src="https://c1.popads.net/pop.js" async></script>
 </body>
 </html>
