--- a/index.html
+++ b/index.html
@@ -1,1 +1,112 @@
-<!DOCTYPE html> <html lang="zh"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <meta name='admaven-placement' content="BqdUEqdg8"> <!-- 广告联盟验证代码 --> <title>天马联盟网</title> <style> /* 纯色动态背景 */ body { font-family: Arial, sans-serif; margin: 0; padding: 0; height: 100%; background: linear-gradient(45deg, #ff7a18, #ffb400, #d9a7c7, #fffcdc); background-size: 400% 400%; animation: backgroundAnimation 15s ease infinite; color: #fff; } @keyframes backgroundAnimation { 0% { background-position: 0% 50%; } 50% { background-position: 100% 50%; } 100% { background-position: 0% 50%; } } /* Header */ header { background-color: rgba(0, 0, 0, 0.7); color: white; padding: 15px 0; text-align: center; } h1 { margin: 0; } /* Main Content */ .content { padding: 20px; position: relative; z-index: 1; min-height: 80vh; /* 确保内容区占满剩余的高度 */ } h2 { text-align: center; font-size: 2rem; } .ad-banner { margin: 20px 0; padding: 20px; background-color: rgba(255, 255, 255, 0.8); border: 1px solid #ddd; text-align: center; opacity: 0; transform: translateY(20px); animation: adAnimation 2s ease-out forwards; } /* 动态广告效果 */ @keyframes adAnimation { 0% { opacity: 0; transform: translateY(20px); } 100% { opacity: 1; transform: translateY(0); } } .ad-banner img { width: 100%; height: auto; max-height: 250px; object-fit: cover; } .ad-banner p { font-size: 1.2rem; color: #333; margin: 10px 0; } .ad-banner button { background-color: #ff7a18; color: #fff; padding: 10px 20px; border: none; cursor: pointer; font-size: 1rem; border-radius: 5px; } .ad-banner button:hover { background-color: #ffb400; } .ad-info { background-color: rgba(0, 0, 0, 0.7); color: #fff; margin: 30px 0; padding: 20px; text-align: center; } /* Footer */ footer { background-color: rgba(0, 0, 0, 0.7); color: white; text-align: center; padding: 10px 0; position: relative; /* 取消固定定位 */ } footer .contact-info { font-size: 1rem; margin-top: 10px; font-weight: bold; } .legal { font-size: 0.8rem; margin-top: 10px; } </style> </head> <body> <header> <h1>天马联盟网</h1> <p>您的广告合作伙伴，专业推广，持续增长</p > </header> <div class="content"> <h2>最新广告展示</h2> <!-- 广告位 1：小说网推广 --> <div class="ad-banner"> <h3>小说推广：广告位 1</h3> <p>点击下方图片，阅读更多精彩小说！</p > <a href=" " target="_blank"> < img src="https://img9.doubanio.com/view/subject/l/public/s30647071.jpg" alt="小说网站推广广告"> </a > <button onclick="alert('广告被点击！')">点击查看</button> </div> <!-- 广告位 2：短剧网推广 --> <div class="ad-banner"> <h3>短剧推广：广告位 2</h3> <p>想看短剧？赶紧点击！</p > <a href="https://www.kanxiaoshuo.com" target="_blank"> < img src="https://img.yitimg.com/uploads/wechat/2023/04/21/ff37fc50a7e642c49fa4058e8d5ccdf1.jpg" alt="短剧网站推广广告"> </a > <button onclick="alert('广告被点击！')">点击查看</button> </div> <!-- 广告位 3：小说网推广 --> <div class="ad-banner"> <h3>小说推广：广告位 3</h3> <p>浏览更多精彩小说，马上点击！</p > <a href="https://www.xs8.cn" target="_blank"> < img src="https://img9.doubanio.com/view/subject/l/public/s30647071.jpg" alt="小说网站推广广告"> </a > <button onclick="alert('广告被点击！')">点击查看</button> </div> <!-- 广告联盟信息 --> <div class="ad-info"> <h3>广告联盟合作信息</h3> <p>我们提供优质的广告展示平台，帮助您提高曝光率和转化率。</p > <p><strong>加入我们：</strong>成为广告联盟的一部分，增加收益。</p > <p><strong>支持广告类型：</strong>显示广告、视频广告、直链广告等。</p > </div> </div> <footer> <p>© 2025 天马联盟网 | <a href="#">服务条款</a > | <a href="#">隐私政策</a ></p > <div class="contact-info"> <p><strong>联系邮箱：</strong>yangmaoqiang49@gmail.com</p > <p><strong>电话：</strong>+86 17785918002</p > </div> <div class="legal"> <p>所有内容均为天马联盟网版权所有，未经授权不得转载。</p > </div> </footer> </body> </html>
+<!DOCTYPE html>
+<html lang="zh">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='admaven-placement' content="BqdUEqdg8">
+    <title>天马联盟网</title>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            background: linear-gradient(45deg, #ff7a18, #ffb400, #d9a7c7, #fffcdc);
+            background-size: 400% 400%;
+            animation: backgroundAnimation 15s ease infinite;
+            color: #fff;
+        }
+
+        @keyframes backgroundAnimation {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        header {
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 15px 0;
+            text-align: center;
+        }
+
+        .content {
+            padding: 20px;
+            min-height: 80vh;
+        }
+
+        .ad-banner {
+            margin: 20px 0;
+            padding: 20px;
+            background-color: rgba(255,255,255,0.85);
+            color: #333;
+            text-align: center;
+            border-radius: 6px;
+        }
+
+        footer {
+            background-color: rgba(0, 0, 0, 0.7);
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+        }
+    </style>
+</head>
+
+<body>
+
+<!-- ✅ Admaven / 成人 Pop / 直链代码（已正确放置） -->
+<script type="text/javascript" data-cfasync="false">
+(function(){
+    var c=window,
+    j="b16f82ee5513ecfdc06df61cd0e71753",
+    y=[["siteId",4748474],["minBid",0],["popundersPerIP","0"],["delayBetween",0],["default",false],["defaultPerDay",0],["topmostLayer","auto"]],
+    b=[
+        "d3d3LnhhZHNtYXJ0LmNvbS9TL2Jqc29uLWZvcm1hdHRlci5taW4uanM=",
+        "ZDExZW5xMnJ5bXkweWwuY2xvdWRmcm9udC5uZXQvT0F4RVNyL0R0S2wva3N2Zy5taW4uY3Nz"
+    ],
+    n=-1,t,h,
+    i=function(){
+        clearTimeout(h);
+        n++;
+        if(b[n]){
+            t=c.document.createElement("script");
+            t.type="text/javascript";
+            t.async=!0;
+            t.src="https://"+atob(b[n]);
+            t.crossOrigin="anonymous";
+            t.onerror=i;
+            h=setTimeout(i,5000);
+            c.document.body.appendChild(t);
+        }
+    };
+    if(!c[j]){
+        try{Object.freeze(c[j]=y)}catch(e){}
+        i();
+    }
+})();
+</script>
+<!-- ✅ 广告代码结束 -->
+
+<header>
+    <h1>天马联盟网</h1>
+    <p>您的广告合作伙伴，专业推广，持续增长</p>
+</header>
+
+<div class="content">
+    <h2>最新广告展示</h2>
+
+    <div class="ad-banner">
+        <h3>小说推广</h3>
+        <p>点击下方查看精彩内容</p>
+    </div>
+</div>
+
+<footer>
+    <p>© 2025 天马联盟网</p>
+    <p>联系邮箱：yangmaoqiang49@gmail.com</p>
+</footer>
+
+</body>
+</html>
