--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name='admaven-placement' content="BqdUEqdg8">
+
+    <!-- ✅ PopAds 验证码（必须放在 head 内） -->
+    <meta name="popads-verification-3557104" value="dd5b680a50f2cb1654f979a955c69855" />
+
     <title>天马联盟网</title>
 
     <style>
@@ -52,7 +56,7 @@
             padding: 10px 0;
         }
     </style>
-</head><meta name="popads-verification-3557104" value="dd5b680a50f2cb1654f979a955c69855" />
+</head>
 
 <body>
 
@@ -110,4 +114,4 @@
 
 </body>
 </html>
-
+v
