--- a/index.html
+++ b/index.html
@@ -2,65 +2,56 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name='admaven-placement' content="BqdUEqdg8">
 
-    <!-- ✅ PopAds 验证码（必须放在 head 内） -->
-    <meta name="popads-verification-3557104" value="dd5b680a50f2cb1654f979a955c69855" />
+    <!-- ✅ PopAds 域名验证（关键：必须用 content） -->
+    <meta name="popads-verification-3557104" content="dd5b680a50f2cb1654f979a955c69855">
 
     <title>天马联盟网</title>
 
     <style>
         body {
-            font-family: Arial, sans-serif;
             margin: 0;
-            padding: 0;
-            height: 100%;
+            font-family: Arial, Helvetica, sans-serif;
+            min-height: 100vh;
             background: linear-gradient(45deg, #ff7a18, #ffb400, #d9a7c7, #fffcdc);
             background-size: 400% 400%;
-            animation: backgroundAnimation 15s ease infinite;
+            animation: bg 15s ease infinite;
             color: #fff;
         }
 
-        @keyframes backgroundAnimation {
+        @keyframes bg {
             0% { background-position: 0% 50%; }
             50% { background-position: 100% 50%; }
             100% { background-position: 0% 50%; }
         }
 
-        header {
-            background-color: rgba(0, 0, 0, 0.7);
-            color: white;
-            padding: 15px 0;
+        header, footer {
+            background: rgba(0, 0, 0, 0.7);
             text-align: center;
+            padding: 15px;
         }
 
         .content {
-            padding: 20px;
-            min-height: 80vh;
+            padding: 30px;
+            min-height: 70vh;
         }
 
-        .ad-banner {
-            margin: 20px 0;
-            padding: 20px;
-            background-color: rgba(255,255,255,0.85);
+        .ad-box {
+            background: rgba(255,255,255,0.9);
             color: #333;
-            text-align: center;
+            padding: 20px;
             border-radius: 6px;
-        }
-
-        footer {
-            background-color: rgba(0, 0, 0, 0.7);
-            color: white;
+            margin-top: 20px;
             text-align: center;
-            padding: 10px 0;
         }
     </style>
 </head>
 
 <body>
 
-<!-- ✅ Admaven / 成人 Pop / 直链代码（已正确放置） -->
+<!-- ✅ Pop / 成人广告脚本（不影响验证） -->
 <script type="text/javascript" data-cfasync="false">
 (function(){
     var c=window,
@@ -91,19 +82,19 @@
     }
 })();
 </script>
-<!-- ✅ 广告代码结束 -->
+<!-- ✅ 广告脚本结束 -->
 
 <header>
     <h1>天马联盟网</h1>
-    <p>您的广告合作伙伴，专业推广，持续增长</p>
+    <p>专业流量变现 · Pop / 直链 / 成人</p>
 </header>
 
 <div class="content">
     <h2>最新广告展示</h2>
 
-    <div class="ad-banner">
-        <h3>小说推广</h3>
-        <p>点击下方查看精彩内容</p>
+    <div class="ad-box">
+        <h3>小说 / CPA / CPM 推广</h3>
+        <p>全球流量 · 自动跳转 · 高转化</p>
     </div>
 </div>
 
@@ -114,4 +105,3 @@
 
 </body>
 </html>
-v
