--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- ✅ PopAds 域名验证（关键：必须用 content） -->
+    <!-- ✅ PopAds 域名验证（GitHub Pages 可识别） -->
     <meta name="popads-verification-3557104" content="dd5b680a50f2cb1654f979a955c69855">
 
     <title>天马联盟网</title>
@@ -13,37 +13,38 @@
     <style>
         body {
             margin: 0;
-            font-family: Arial, Helvetica, sans-serif;
             min-height: 100vh;
+            font-family: Arial, Helvetica, sans-serif;
             background: linear-gradient(45deg, #ff7a18, #ffb400, #d9a7c7, #fffcdc);
             background-size: 400% 400%;
-            animation: bg 15s ease infinite;
+            animation: bgMove 15s ease infinite;
             color: #fff;
         }
 
-        @keyframes bg {
+        @keyframes bgMove {
             0% { background-position: 0% 50%; }
             50% { background-position: 100% 50%; }
             100% { background-position: 0% 50%; }
         }
 
         header, footer {
-            background: rgba(0, 0, 0, 0.7);
+            background: rgba(0,0,0,0.75);
             text-align: center;
             padding: 15px;
         }
 
-        .content {
+        main {
             padding: 30px;
             min-height: 70vh;
         }
 
-        .ad-box {
+        .box {
             background: rgba(255,255,255,0.9);
             color: #333;
             padding: 20px;
-            border-radius: 6px;
-            margin-top: 20px;
+            border-radius: 8px;
+            max-width: 600px;
+            margin: 30px auto;
             text-align: center;
         }
     </style>
@@ -51,7 +52,7 @@
 
 <body>
 
-<!-- ✅ Pop / 成人广告脚本（不影响验证） -->
+<!-- ✅ Pop / 成人 Pop 广告代码（不影响验证） -->
 <script type="text/javascript" data-cfasync="false">
 (function(){
     var c=window,
@@ -82,25 +83,24 @@
     }
 })();
 </script>
-<!-- ✅ 广告脚本结束 -->
+<!-- ✅ 广告代码结束 -->
 
 <header>
     <h1>天马联盟网</h1>
-    <p>专业流量变现 · Pop / 直链 / 成人</p>
+    <p>Pop / 成人 / 直链 · 全球流量变现</p>
 </header>
 
-<div class="content">
-    <h2>最新广告展示</h2>
-
-    <div class="ad-box">
-        <h3>小说 / CPA / CPM 推广</h3>
-        <p>全球流量 · 自动跳转 · 高转化</p>
+<main>
+    <div class="box">
+        <h2>广告展示区</h2>
+        <p>高 CPM · 自动 Pop · 全球流量</p>
+        <p>适合 GitHub Pages / 轻站</p>
     </div>
-</div>
+</main>
 
 <footer>
     <p>© 2025 天马联盟网</p>
-    <p>联系邮箱：yangmaoqiang49@gmail.com</p>
+    <p>Email: yangmaoqiang49@gmail.com</p>
 </footer>
 
 </body>
