--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- ✅ PopAds 域名验证（GitHub Pages 可识别） -->
-    <meta name="popads-verification-3557104" content="dd5b680a50f2cb1654f979a955c69855">
+    <!-- ✅ 联盟站点验证 Meta -->
+    <meta name="6a97888e-site-verification" content="20cef83f83af7bc24e3b33127154607c">
 
     <title>天马联盟网</title>
 
@@ -52,39 +52,6 @@
 
 <body>
 
-<!-- ✅ Pop / 成人 Pop 广告代码（不影响验证） -->
-<script type="text/javascript" data-cfasync="false">
-(function(){
-    var c=window,
-    j="b16f82ee5513ecfdc06df61cd0e71753",
-    y=[["siteId",4748474],["minBid",0],["popundersPerIP","0"],["delayBetween",0],["default",false],["defaultPerDay",0],["topmostLayer","auto"]],
-    b=[
-        "d3d3LnhhZHNtYXJ0LmNvbS9TL2Jqc29uLWZvcm1hdHRlci5taW4uanM=",
-        "ZDExZW5xMnJ5bXkweWwuY2xvdWRmcm9udC5uZXQvT0F4RVNyL0R0S2wva3N2Zy5taW4uY3Nz"
-    ],
-    n=-1,t,h,
-    i=function(){
-        clearTimeout(h);
-        n++;
-        if(b[n]){
-            t=c.document.createElement("script");
-            t.type="text/javascript";
-            t.async=!0;
-            t.src="https://"+atob(b[n]);
-            t.crossOrigin="anonymous";
-            t.onerror=i;
-            h=setTimeout(i,5000);
-            c.document.body.appendChild(t);
-        }
-    };
-    if(!c[j]){
-        try{Object.freeze(c[j]=y)}catch(e){}
-        i();
-    }
-})();
-</script>
-<!-- ✅ 广告代码结束 -->
-
 <header>
     <h1>天马联盟网</h1>
     <p>Pop / 成人 / 直链 · 全球流量变现</p>
@@ -93,7 +60,7 @@
 <main>
     <div class="box">
         <h2>广告展示区</h2>
-        <p>高 CPM · 自动 Pop · 全球流量</p>
+        <p>高 CPM · 全球流量</p>
         <p>适合 GitHub Pages / 轻站</p>
     </div>
 </main>
